# stringutils

./: .coveragerc  Makefile  README.md  pyproject.toml
stringutils/: __init__.py  case_conversion.py
tests/stringutils/: test_generic_methods.py
